--- a/styles/style.css
+++ b/styles/style.css
@@ -39,7 +39,7 @@ body {
 
 .wrapper {
   height: 100%;
-  background-color: #1e3640;
+  background-color: #1a2b33;
   display: grid;
   grid-template-rows: 1fr 0fr;
   align-content: space-between;
@@ -69,7 +69,7 @@ body {
 }
 
 .dialog-pre-round {
-  color: rgba(255, 255, 255, 0.5568627451);
+  color: rgba(255, 255, 255, 0.6235294118);
   border: none;
   background-color: #1a2b33;
   height: 500px;
@@ -118,7 +118,7 @@ body {
 .dialog-pre-round > div div button {
   font-size: 2rem;
   padding: 5px 20px;
-  color: rgba(255, 255, 255, 0.5568627451);
+  color: rgba(255, 255, 255, 0.6235294118);
   background-color: transparent;
   border: none;
 }
@@ -140,25 +140,77 @@ body {
 
 /* -------- Tic Tac Toe -------- */
 .tic-tac-toe {
-  height: 100%;
+  display: grid;
+  align-items: center;
 }
 .tic-tac-toe header {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   justify-items: center;
+  align-items: center;
+}
+.tic-tac-toe header h1 {
+  font-size: 2.5rem;
+  font-weight: bold;
+  justify-self: end;
+}
+.tic-tac-toe header h1 span:first-child {
+  color: #34c3be;
+}
+.tic-tac-toe header h1 span:last-child {
+  color: #f2b138;
+}
+.tic-tac-toe header p {
+  font-size: 1.2rem;
+  color: rgba(255, 255, 255, 0.6235294118);
+  text-align: center;
+  padding: 10px 20px;
+  border-radius: 8px;
+  box-shadow: 0px 5px 1px #111e24;
+  background-color: #1e3640;
+}
+.tic-tac-toe header button {
+  background-color: #a9bec8;
+  border: none;
+  border-radius: 4px;
+  box-shadow: 0px 3px 1px #7a868d;
+  justify-self: start;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+.tic-tac-toe header button img {
+  height: 32px;
+  width: 32px;
+  padding: 5px;
 }
 .tic-tac-toe main {
   display: grid;
-  grid-template: repeat(3, 220px)/repeat(3, 220px);
+  grid-template: repeat(3, 130px)/repeat(3, 130px);
   justify-content: center;
   justify-items: center;
   align-items: center;
-  gap: 10px;
+  gap: 25px;
 }
 .tic-tac-toe main .grid {
-  background-color: #1a2b33;
+  font-size: 6rem;
+  font-weight: 900;
+  line-height: 1rem;
+  background-color: #1e3640;
+  border-radius: 15px;
+  box-shadow: 0px 6px 1px #111e24;
   height: 100%;
   width: 100%;
+  display: grid;
+  justify-content: center;
+  align-content: center;
+}
+.tic-tac-toe main .grid--x {
+  color: #34c3be;
+}
+.tic-tac-toe main .grid--o {
+  color: #f2b138;
 }
 .tic-tac-toe footer {
   display: grid;
