--- a/styles/style.scss
+++ b/styles/style.scss
@@ -181,6 +181,7 @@ body {
     opacity: 0.4;
   }
   &__header {
+    color: $font-light;
     font-size: 1.5rem;
     text-align: center;
     &--x {
@@ -189,8 +190,12 @@ body {
     &--o {
       color: $theme-blue;
     }
+    &--tie {
+      color: $theme-light;
+    }
   }
   &__winner {
+    color: $font-light;
     font-size: clamp(1rem, 1rem + 4vw, 5rem);
     line-height: 5rem;
     font-weight: bold;
@@ -199,6 +204,9 @@ body {
     }
     &--o {
       color: $theme-yellow;
+    }
+    &--tie {
+      color: $theme-light;
     }
   }
   div {
@@ -238,6 +246,8 @@ body {
       border-radius: 5px;
       height: 35px;
       width: 160px;
+      background-color: $theme-yellow;
+      box-shadow: 0px 3px 1px #a77a27;
       cursor: pointer;
       &--x {
         background-color: $theme-yellow;
@@ -246,6 +256,11 @@ body {
       &--o {
         background-color: $theme-blue;
         box-shadow: 0px 3px 1px #21807b;
+      }
+      &--tie {
+        color: $font-dark;
+        background-color: $theme-light;
+        box-shadow: 0px 3px 1px #7a868d;
       }
     }
   }
