--- a/styles/style.css
+++ b/styles/style.css
@@ -274,7 +274,7 @@ body {
   height: 40px;
   width: 110px;
   border-radius: 8px;
-  box-shadow: 0px 5px 1px #111e24;
+  box-shadow: 0px 3px 1px #111e24;
   background-color: #1e3640;
   display: grid;
   align-items: center;
@@ -323,16 +323,19 @@ body {
   color: #f2b138;
 }
 .tic-tac-toe footer {
+  padding: 0px 20px;
   display: grid;
-  grid-template-columns: repeat(3, 1fr);
+  grid-template-columns: repeat(3, minmax(100px, 180px));
+  justify-content: center;
   justify-items: center;
   align-self: start;
+  gap: 15px;
 }
 .tic-tac-toe footer div {
   color: #1a2b33;
-  width: 100px;
-  height: 50px;
-  border-radius: 12px;
+  height: 60px;
+  width: 100%;
+  border-radius: 8px;
   display: grid;
   justify-items: center;
 }
@@ -347,12 +350,10 @@ body {
 }
 .tic-tac-toe footer .x-score {
   background-color: #34c3be;
-  justify-self: end;
 }
 .tic-tac-toe footer .tie-score {
   background-color: #a9bec8;
 }
 .tic-tac-toe footer .o-score {
   background-color: #f2b138;
-  justify-self: start;
 }/*# sourceMappingURL=style.css.map */
