--- a/styles/style.scss
+++ b/styles/style.scss
@@ -293,7 +293,7 @@ body {
       color: $font-white;
       text-align: center;
       height: 40px;
-      width: 110px;
+      width: 200px;
       border-radius: 8px;
       box-shadow: 0px 3px 1px #111e24;
       background-color: $theme-dark;
@@ -337,12 +337,45 @@ body {
       display: grid;
       justify-content: center;
       align-content: center;
-      &--x {
+      &__x {
         color: $theme-blue;
       }
-      &--o {
+      &__o {
         color: $theme-yellow;
       }
+
+      /* Empty grid hover animations */
+      &--hover-x {
+        &::after {
+          transition: all 0.3s;
+          color: $theme-dark;
+          opacity: 0;
+          content: 'X';
+          -webkit-text-stroke: 1px $theme-blue;
+          // text-shadow: -1px 0 $theme-blue, 0 1px $theme-blue, 1px 0 $theme-blue, 0 -1px $theme-blue;
+        }
+        &:hover {
+          &::after {
+            opacity: 1;
+          }
+        }
+      }
+      &--hover-o {
+        &::after {
+          transition: all 0.3s;
+          color: $theme-dark;
+          opacity: 0;
+          content: 'O';
+          -webkit-text-stroke: 1px $theme-yellow;
+          // text-shadow: -1px 0 $theme-blue, 0 1px $theme-blue, 1px 0 $theme-blue, 0 -1px $theme-blue;
+        }
+        &:hover {
+          &::after {
+            opacity: 1;
+          }
+        }
+      }
+
     }
   }
   footer {
