--- a/styles/style.scss
+++ b/styles/style.scss
@@ -177,16 +177,25 @@ body {
       }
     }
   }
-  >button {
-    background-color: $theme-yellow;
+  .button-game-mode {
     border: none;
     border-radius: 8px;
-    padding: 10px 40px;
+    height: 42px;
+    width: 200px;
     margin-top: 20px;
-    box-shadow: 0px 4px 1px #a77a27;
+
     cursor: pointer;
     transition: all 0.2s;
-    @include buttons-feedback(#a77a27);
+    &[data-vs="ai"] {
+      background-color: $theme-blue;
+      box-shadow: 0px 4px 1px #21807b;
+      @include buttons-feedback(#21807b);
+    }
+    &[data-vs="player"] {
+      background-color: $theme-yellow;
+      box-shadow: 0px 4px 1px #a77a27;
+      @include buttons-feedback(#a77a27);
+    }
   }
 }
 
@@ -201,6 +210,7 @@ body {
   &[open] {
     display: grid;
     justify-content: center;
+    justify-items: center;
     align-content: center;
   }
   &::backdrop {
@@ -270,7 +280,6 @@ body {
     .button-play-again {
       font-size: 1.1rem;
       color: rgb(22, 22, 22);
-
       border: none;
       border-radius: 5px;
       height: 35px;
@@ -304,53 +313,62 @@ body {
   align-items: center;
   header {
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
     justify-items: center;
-    align-items: center;
     align-self: end;
-    h1 {
-      font-size: 2.5rem;
-      font-weight: bold;
-      justify-self: end;
-      span:first-child {
-        color: $theme-blue;
-      }
-      span:last-child {
-        color: $theme-yellow;
-      }
-    }
-    p {
-      font-size: 1.2rem;
-      color: $font-white;
-      text-align: center;
-      height: 40px;
-      width: 200px;
-      border-radius: 8px;
-      box-shadow: 0px 3px 1px #111e24;
-      background-color: $theme-dark;
+    div {
+      width: 350px;
+      padding: 0px 20px;
+
       display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      justify-items: center;
       align-items: center;
-    }
-    button {
-      background-color: $theme-light;
-      border: none;
-      border-radius: 4px;
-      box-shadow: 0px 3px 1px #7a868d;
-      justify-self: start;
-      padding: 0;
-      display: flex;
-      align-items: center;
-      cursor: pointer;
-      transition: all 0.2s;
-      img {
-        height: 32px;
-        width: 32px;
-        padding: 5px;
+      align-self: end;
+      gap: 20px;
+      h1 {
+        font-size: 2.5rem;
+        font-weight: bold;
+        span:first-child {
+          color: $theme-blue;
+        }
+        span:last-child {
+          color: $theme-yellow;
+        }
       }
-      @include home-button-feedback();
+      p {
+        font-size: 1.1rem;
+        color: $font-white;
+        text-align: center;
+        height: 40px;
+        width: 100px;
+        border-radius: 8px;
+        box-shadow: 0px 3px 1px #111e24;
+        background-color: $theme-dark;
+        display: grid;
+        align-items: center;
+      }
+      button {
+        background-color: $theme-light;
+        border: none;
+        border-radius: 4px;
+        box-shadow: 0px 3px 1px #7a868d;
+        padding: 0;
+        display: flex;
+        align-items: center;
+        cursor: pointer;
+        transition: all 0.2s;
+        img {
+          height: 32px;
+          width: 32px;
+          padding: 5px;
+        }
+        @include home-button-feedback();
+      }
     }
   }
   main {
+    margin: 10px 0px 30px;
+
     display: grid;
     grid-template: repeat(3, 130px)/repeat(3, 130px);
     justify-content: center;
@@ -413,7 +431,7 @@ body {
     padding: 0px 20px;
 
     display: grid;
-    grid-template-columns: repeat(3, minmax(100px, 180px));
+    grid-template-columns: repeat(3, minmax(50px, 180px));
     justify-content: center;
     justify-items: center;
     align-self: start;
@@ -421,9 +439,8 @@ body {
     div {
       color: $font-dark;
       height: 60px;
-      width: 100%;
       border-radius: 8px;;
-
+      width: 100%;
       display: grid;
       justify-items: center;
       p {
@@ -444,6 +461,20 @@ body {
     }
     .o-score {
       background-color: $theme-yellow;
+    }
+  }
+}
+
+/* -------- Breakpoints -------- */
+ 
+@media all and (max-width: 480px) { 
+  .tic-tac-toe {
+    main {
+      grid-template: repeat(3, 95px)/repeat(3, 95px);
+      gap: 15px;
+      .grid {
+        font-size: 4.5rem;
+      }
     }
   }
 }
